# extremitypathfinder

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  TODOs.txt  a_star.py  build_n_install.py  example.json  example.py  extremitypathfinder.py  gui.py  helper_classes.py  helper_fcts.py  helpers.py  publish.py  pyproject.toml  readthedocs.yml  requirements.in  requirements.txt  requirements_tests.in  requirements_tests.txt  runtests.py  setup.cfg  setup.py  test_it.py  tox.ini
.github/workflows/: build.yml
docs/: 0_getting_started.rst  1_usage.rst  3_about.rst  4_api.rst  7_performance.rst  badges.rst  conf.py  index.rst  requirements.txt  requirements_docs.txt
extremitypathfinder/: __init__.py  command_line.py  configs.py  extremitypathfinder.py  global_settings.py  graph_search.py  gui.py  helper_classes.py  helper_fcts.py  numba_replacements.py  plotting.py  specs.json  types.py  utils.py  utils_numba.py
scripts/: speed_benchmarks.py
tests/: cli_test.py  helper_classes_test.py  helper_classes_tests.py  helper_fcts_test.py  helper_fcts_tests.py  helpers.py  main_test.py  main_tests.py  test_cases.py  test_find_visible.py  test_helper_classes.py  test_helper_fcts.py  test_helpers.py  test_main.py
