[bdist_wheel]
;universal = 1
python-tag = py36

[flake8]
max_line_length = 120

[isort]
include_trailing_comma = True
known_first_party = extremitypathfinder
line_length = 120
multi_line_output = 5
not_skip = __init__.py

[metadata]
description-file = README.rst
license_file = LICENSE

[tool:multilint]
paths = extremitypathfinder
        setup.py
        tests

[tool:pytest]
; TODO make it work
testpaths = tests
addopts = --cov=extremitypathfinder
          --cov-report term-missing
          --cov-fail-under 0
