[metadata]
version = file: VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst

[bdist_wheel]
; does not run on Python 2 and 3
universal = 0

[isort]
;https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = True
known_first_party = extremitypathfinder
known_third_party = numpy
line_length = 120
multi_line_output = 5
balanced_wrapping = True
use_parentheses = True

[coverage:run]
branch = True
include = */extremitypathfinder/*

[coverage:paths]
source =
    extremitypathfinder
    .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max_line_length = 120
;trailing comma
ignore = C819

[tool:multilint]
paths = extremitypathfinder
        setup.py
        tests

[tool:pytest]
; TODO make it work
testpaths = tests
addopts = --cov=extremitypathfinder
          --cov-report term-missing
